# md-db-rs

./: Cargo.toml  LICENSE  README.md  SPEC.md  llms.txt
.cargo/: config.toml
crates/markdown-all/: Cargo.toml
crates/markdown-all-cli/: Cargo.toml
crates/markdown-all-cli/src/: main.rs
crates/markdown-all-cli/src/commands/: get.rs  list.rs
crates/markdown-all/src/: ast_util.rs  discovery.rs  document.rs  error.rs  frontmatter.rs  lib.rs  output.rs  section.rs  table.rs
crates/md-db/: Cargo.toml
crates/md-db-cli/: Cargo.toml
crates/md-db-cli/src/: main.rs
crates/md-db-cli/src/commands/: batch.rs  deprecate.rs  describe.rs  diff.rs  export.rs  fix.rs  get.rs  graph.rs  hook.rs  init.rs  inspect.rs  list.rs  mcp.rs  migrate.rs  mod.rs  new.rs  refs.rs  rename.rs  search.rs  set.rs  stats.rs  sync.rs  validate.rs  watch.rs
crates/md-db/src/: ast_util.rs  cache.rs  diff.rs  discovery.rs  document.rs  error.rs  export.rs  frontmatter.rs  graph.rs  lib.rs  migrate.rs  output.rs  schema.rs  search.rs  section.rs  sync.rs  table.rs  template.rs  users.rs  validation.rs
crates/md-db/tests/: fixtures_test.rs
scripts/: auto_merge_prs.sh
tests/fixtures/: adr-001.md  adr-002.md  adr-003.md  gov-001.md  inc-001.md  opp-001.md  schema-demo.kdl  schema-demo.pkl  schema-demo.sql  schema-demo.toml  schema.kdl  users.yaml
tests/fixtures/singleton/: README.md  schema.kdl
